# example-dataforwarder-zephyr

./: CMakeLists.txt  README.md  prj.conf
src/: main.cpp
